fix white strips on scroll on Firefox
html element was missing background-color

--- a/app/assets/styles/reset.css
+++ b/app/assets/styles/reset.css
@@ -38,6 +38,7 @@
   html,
   body {
     scrollbar-color: var(--primary-color) var(--light-color);
+    background-color: rgb(184, 192, 224);
     /* scroll-behavior: smooth; */
   }
 
