--- a/app/assets/styles/themes/dark.css
+++ b/app/assets/styles/themes/dark.css
@@ -37,6 +37,10 @@
 
 @layer theme {
 
+  html.dark-mode {
+    background-color: var(--light-gray-color);
+  }
+
   .dark-mode {
 
     .bg-gradient {
